--- a/pom.xml
+++ b/pom.xml
@@ -1044,6 +1044,9 @@
                         </goals>
                         <configuration>
                             <executable>${project.npm.bin}/grunt</executable>
+                            <arguments>
+                                <argument>dev</argument>
+                            </arguments>
                         </configuration>
                     </execution>
                     
