Changed inserting of build info to generate-source phase

--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,7 @@
                         <executions>
                             <execution>
                                 <id>insert-version</id>
-                                <phase>compile</phase>
+                                <phase>generate-sources</phase>
                                 <configuration>
                                     <executable>scripts/insertBuildVersion.sh</executable>
                                     <arguments>
