--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,13 @@
     <groupId>fr.ippon.tatami</groupId>
     <artifactId>tatami</artifactId>
     <version>4.0.3</version>
+
     <modules>
         <module>web</module>
         <module>services</module>
+        <module>tatamibot</module>
     </modules>
+
     <packaging>pom</packaging>
 
     <description>Tatami is an enterprise micro-blogging platform</description>
@@ -151,7 +154,7 @@
             <build>
                 <testResources>
                     <testResource>
-                        <directory>src/test/resources</directory>
+                        <directory>services/test/resources</directory>
                     </testResource>
                     <testResource>
                         <directory>src/integration/resources</directory>
@@ -909,18 +912,7 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <artifactId>maven-clean-plugin</artifactId>
-                <version>2.6.1</version>
-                <configuration>
-                    <filesets>
-                        <fileset>
-                            <directory>${project.basedir}/node_modules/karma-phantomjs-launcher</directory>
-                            <followSymlinks>false</followSymlinks>
-                        </fileset>
-                    </filesets>
-                </configuration>
-            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
@@ -1012,28 +1004,7 @@
                     </webApp>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.2.1</version>
-                <executions>
-                    
-                    <execution>
-                        <id>install-phantomjs</id>
-                        <phase>generate-sources</phase>
-                        <configuration>
-                            <executable>npm</executable>
-                            <arguments>
-                                <argument>install</argument>
-                                <argument>karma-phantomjs-launcher</argument>
-                            </arguments>
-                        </configuration>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
@@ -1069,23 +1040,6 @@
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>2.5</version>
             </plugin>
-            <plugin>
-                <groupId>com.github.klieber</groupId>
-                <artifactId>phantomjs-maven-plugin</artifactId>
-                <version>0.4</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>install</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <version>1.9.8</version>
-                    <skip>${js-tests.skip}</skip>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
