Named generated jar-war approprietly

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -11,6 +11,8 @@
 
     <artifactId>services</artifactId>
 
-
+    <build>
+        <finalName>tatami-services-${version}</finalName>
+    </build>
 
 </project>
