--- a/tatamibot/pom.xml
+++ b/tatamibot/pom.xml
@@ -18,5 +18,8 @@
             <version>4.0.3</version>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>tatamibot-${version}</finalName>
+    </build>
 
 </project>
