Updated names to not use depricated variable. Updated README.md

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>services</artifactId>
 
     <build>
-        <finalName>tatami-services-${version}</finalName>
+        <finalName>tatami-services-${project.version}</finalName>
     </build>
 
 </project>
