--- a/web/package.json
+++ b/web/package.json
@@ -4,12 +4,30 @@
   "version": "4.0.1",
   "private": true,
   "devDependencies": {
+    "bower": "^1.5.3",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
+    "grunt-concat": "^0.1.6",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-htmlmin": "^0.4.0",
-    "grunt-contrib-uglify": "^0.9.1"
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-template": "^0.2.3",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.10",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-cli": "^0.1.1",
+    "karma-coverage": "^0.5.2",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-ie-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-jenkins-reporter": "0.0.2",
+    "karma-jshint": "^0.1.0",
+    "karma-junit-reporter": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-safari-launcher": "^0.1.1",
+    "load-grunt-tasks": "^3.3.0",
+    "phantomjs": "^1.9.18"
   }
 }
