--- a/services/pom.xml
+++ b/services/pom.xml
@@ -12,7 +12,22 @@
     <artifactId>services</artifactId>
 
     <build>
-        <finalName>tatami-services-${project.version}</finalName>
+     <finalName>tatami-services-${project.version}</finalName>
+        <plugins>
+            <!-- Generate test jar too -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
