--- a/web/pom.xml
+++ b/web/pom.xml
@@ -18,6 +18,13 @@
             <artifactId>services</artifactId>
             <version>4.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>fr.ippon.tatami</groupId>
+            <artifactId>services</artifactId>
+            <version>4.0.3</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
