--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>tatami</artifactId>
         <groupId>fr.ippon.tatami</groupId>
-        <version>4.0.3</version>
+        <version>4.0.4</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>fr.ippon.tatami</groupId>
             <artifactId>services</artifactId>
-            <version>4.0.3</version>
+            <version>4.0.4</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -86,7 +86,7 @@
         </profile>
     </profiles>
     <build>
-       <!-- <finalName>tatami-${project.version}</finalName> -->
+        <finalName>tatami-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>com.kelveden</groupId>
