--- a/services/src/test/resources/tatami/tatami-test.properties
+++ b/services/src/test/resources/tatami/tatami-test.properties
@@ -3,7 +3,7 @@ tatami.version=1.0-SNAPSHOT
 tatami.url=https://tatami.ippon.fr
 
 #User configuration
-tatami.admin.users=tatami@ippon.fr
+tatami.admin.users=tatami@ippon.fr,jdubois@ippon.fr
 
 #E-mail configuration
 smtp.host=mail.ippon.fr
