--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,30 @@
                 <spring.profiles.active></spring.profiles.active>
             </properties>
         </profile>
+        <profile>
+            <id>jrebel</id>
+            <properties>
+                <!-- Spring profiles available : tatamibot, metrics, apple-push -->
+                <spring.profiles.active></spring.profiles.active>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.zeroturnaround</groupId>
+                        <artifactId>jrebel-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>generate-rebel-xml</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
 
         <profile>
             <id>elasticsearch-remote</id>
@@ -282,6 +306,53 @@
                 </plugins>
             </build>
             <dependencies>
+                <!--<dependency>-->
+                    <!--<groupId>com.netflix.astyanax</groupId>-->
+                    <!--<artifactId>astyanax-core</artifactId>-->
+                    <!--<version>3.8.0</version>-->
+                    <!--<scope>compile</scope>-->
+                <!--</dependency>-->
+                <!--<dependency>-->
+                    <!--<groupId>com.netflix.astyanax</groupId>-->
+                    <!--<artifactId>astyanax-cassandra</artifactId>-->
+                    <!--<version>3.8.0</version>-->
+                    <!--<scope>compile</scope>-->
+                <!--</dependency>-->
+                <!--<dependency>-->
+                    <!--<groupId>com.netflix.astyanax</groupId>-->
+                    <!--<artifactId>astyanax-thrift</artifactId>-->
+                    <!--<version>3.8.0</version>-->
+                    <!--<scope>compile</scope>-->
+                <!--</dependency>-->
+                <!--<dependency>-->
+                    <!--<groupId>com.netflix.astyanax</groupId>-->
+                    <!--<artifactId>astyanax-cql</artifactId>-->
+                    <!--<version>3.8.0</version>-->
+                    <!--<scope>compile</scope>-->
+                <!--</dependency>-->
+                <!--<dependency>-->
+                    <!--<groupId>com.netflix.astyanax</groupId>-->
+                    <!--<artifactId>astyanax-queue</artifactId>-->
+                    <!--<version>3.8.0</version>-->
+                    <!--<scope>compile</scope>-->
+                <!--</dependency>-->
+                <!--<dependency>-->
+                    <!--<groupId>com.netflix.astyanax</groupId>-->
+                    <!--<artifactId>astyanax-recipes</artifactId>-->
+                    <!--<version>3.8.0</version>-->
+                    <!--<scope>compile</scope>-->
+                <!--</dependency>-->
+                <!--<dependency>-->
+                    <!--<groupId>com.netflix.astyanax</groupId>-->
+                    <!--<artifactId>astyanax-entity-mapper</artifactId>-->
+                    <!--<version>3.8.0</version>-->
+                    <!--<scope>compile</scope>-->
+                <!--</dependency>-->
+                <dependency>
+                    <groupId>com.rometools</groupId>
+                    <artifactId>rome</artifactId>
+                    <version>1.5.0</version>
+                </dependency>
                 <dependency>
                     <groupId>org.codehaus.groovy</groupId>
                     <artifactId>groovy-all</artifactId>
@@ -393,11 +464,11 @@
         <sonar.exclusions>src/main/webapp/assets/**.*</sonar.exclusions>
         <!-- Configuration -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.6</java.version>
+        <java.version>1.8</java.version>
 
         <!-- Dependencies -->
-        <spring.version>3.2.3.RELEASE</spring.version>
-        <spring.security.version>3.1.3.RELEASE</spring.security.version>
+        <spring.version>4.2.3.RELEASE</spring.version>
+        <spring.security.version>4.0.3.RELEASE</spring.security.version>
         <elasticsearch.version>0.20.6</elasticsearch.version>
         <aspectj.version>1.6.11</aspectj.version>
         <slf4j.version>1.7.5</slf4j.version>
@@ -436,7 +507,7 @@
         <maven.surefire.version>2.14</maven.surefire.version>
         <maven.war.version>2.3</maven.war.version>
         <maven.jetty.version>8.1.13.v20130916</maven.jetty.version>
-        <maven.cassandra.version>1.2.1-1</maven.cassandra.version>
+        <maven.cassandra.version>2.1.7-1</maven.cassandra.version>
         <maven.wro4j.version>1.7.0</maven.wro4j.version>
         <maven-eclipse-plugin.version>2.9</maven-eclipse-plugin.version>
         <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
@@ -467,6 +538,53 @@
     </prerequisites>
 
     <dependencies>
+        <!--<dependency>-->
+            <!--<groupId>com.netflix.astyanax</groupId>-->
+            <!--<artifactId>astyanax-core</artifactId>-->
+            <!--<version>3.8.0</version>-->
+            <!--<scope>compile</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.netflix.astyanax</groupId>-->
+            <!--<artifactId>astyanax-cassandra</artifactId>-->
+            <!--<version>3.8.0</version>-->
+            <!--<scope>compile</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.netflix.astyanax</groupId>-->
+            <!--<artifactId>astyanax-thrift</artifactId>-->
+            <!--<version>3.8.0</version>-->
+            <!--<scope>compile</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.netflix.astyanax</groupId>-->
+            <!--<artifactId>astyanax-cql</artifactId>-->
+            <!--<version>3.8.0</version>-->
+            <!--<scope>compile</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.netflix.astyanax</groupId>-->
+            <!--<artifactId>astyanax-queue</artifactId>-->
+            <!--<version>3.8.0</version>-->
+            <!--<scope>compile</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.netflix.astyanax</groupId>-->
+            <!--<artifactId>astyanax-recipes</artifactId>-->
+            <!--<version>3.8.0</version>-->
+            <!--<scope>compile</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.netflix.astyanax</groupId>-->
+            <!--<artifactId>astyanax-entity-mapper</artifactId>-->
+            <!--<version>3.8.0</version>-->
+            <!--<scope>compile</scope>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>com.rometools</groupId>
+            <artifactId>rome</artifactId>
+            <version>1.5.0</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-json-org</artifactId>
@@ -832,7 +950,7 @@
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
-            <version>0.8.1</version>
+            <version>2.0.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -958,7 +1076,7 @@
                 <configuration>
                     <reportsDirectory>${project.testresult.directory}/surefire-reports</reportsDirectory>
                     <argLine>-XX:MaxPermSize=128m -Xmx256m ${surefireArgLine}</argLine>
-                    <skipTests>${skip.unit.tests}</skipTests>
+                    <!--<skipTests>${skip.unit.tests}</skipTests>-->
                     <!-- Force alphabetical order to have a reproducible build -->
                     <runOrder>alphabetical</runOrder>
                     <!-- 
@@ -1067,6 +1185,20 @@
                             <dataFile>${project.testresult.directory}/coverage/jacoco/jacoco.exec</dataFile>
                             <outputDirectory>${project.testresult.directory}/coverage/jacoco</outputDirectory>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.zeroturnaround</groupId>
+                <artifactId>jrebel-maven-plugin</artifactId>
+                <version>1.1.5</version>
+                <executions>
+                    <execution>
+                        <id>generate-rebel-xml</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
